--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "postcss": "^8.2.4"
   },
   "dependencies": {
-    "@popperjs/core": "^2.6.0",
-    "bootstrap": "^5.0.0-beta1",
+    "popper.js": "^1.16.1",
+    "bootstrap": "^4.5.2",
     "bootstrap-datepicker": "^1.9.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "photoswipe": "^4.1.3"
   }
 }
+
