--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "postcss": "^8.2.4"
   },
   "dependencies": {
-    "popper.js": "^1.16.1",
-    "bootstrap": "^4.5.2",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.2",
     "bootstrap-datepicker": "^1.9.0",
     "jquery": "^3.6.0",
     "photoswipe": "^4.1.3"
